// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test HOC. Should call scrollById. 1`] = `
<WithScrollToHOC(Unknown)>
  <ScrollTo>
    <Component
      scrollById={[Function]}
      scrollTo={[Function]}
    >
      <div>
        <div
          id="foo"
        />
        <button
          onClick={[Function]}
        >
          test
        </button>
      </div>
    </Component>
  </ScrollTo>
</WithScrollToHOC(Unknown)>
`;

exports[`Test HOC. Should render the functional children. 1`] = `
<WithScrollToHOC(test)>
  <ScrollTo>
    <test
      scrollById={[Function]}
      scrollTo={[Function]}
    >
      <div>
        test
      </div>
    </test>
  </ScrollTo>
</WithScrollToHOC(test)>
`;
